--- a/src/views/Container/Container.css
+++ b/src/views/Container/Container.css
@@ -1,5 +1,8 @@
 .container {
+  max-width: 1250px;
+  margin: 0 auto;
+}
+
+.container_flex {
   display: flex;
-    max-width: 1250px;
-    margin: 0 auto; 
-  }
+}
