--- a/src/views/Modal/Modal.css
+++ b/src/views/Modal/Modal.css
@@ -6,12 +6,9 @@
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.45);
-    display: none;
+    display: flex;
   }
   
-  .is-open {
-   display: flex;
-  } 
   .modal__dialog {
    max-width: 780px;
    width: 95%;
@@ -92,5 +89,9 @@
   .note__btn-modal:hover {
     background-color: white;
     color: black;
+  }
+
+  .modal__error-text {
+    color: red;
   }
   
