--- a/src/views/Header/Header.css
+++ b/src/views/Header/Header.css
@@ -43,3 +43,12 @@
   align-items: center;
   margin-right: 40px;
 }
+
+.btn {
+  text-decoration: none;
+  border: 2px solid;
+  color: #cc9748;
+  padding: 5px 10px;
+  cursor: pointer;
+  margin-left: 10px;
+}
