--- a/src/views/Map/Map.css
+++ b/src/views/Map/Map.css
@@ -3,12 +3,15 @@
   justify-content: center;
   align-items: center;
   height: 450px;
+  margin: 10px;
 }
 .wrap__map {
   background-color: black;
   height: 450px;
   width: 100%;
 }
+
+
 
 .wrap__map ymaps {
   opacity: 0.9;
