--- a/src/views/UserInfo/UserInfo.css
+++ b/src/views/UserInfo/UserInfo.css
@@ -1,17 +1,26 @@
 .profile__table {
   border: 2px solid black;
- 
+}
+
+.account__items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding: 30px;
 }
 
 .profile__table-items th {
   background: rgba(0, 0, 0, 0.15);
 }
 
-.profile__table-item {
+.user__table-item {
   border: 1px solid grey;
   padding: 10px;
   cursor: pointer;
   vertical-align: top;
+  min-width: 200px;
 }
 
 .request__table-item {
@@ -31,10 +40,10 @@
   color: whitesmoke;
   font-size: 18px;
   line-height: 20px;
-  padding: 13px 48px;
+  padding: 8px 25px;
   border-radius: 5px;
   cursor: pointer;
-  margin-top: 20px;
+  margin: 50px;
 }
 
 .profile__btn:hover {
