--- a/src/views/Advant/Advant.css
+++ b/src/views/Advant/Advant.css
@@ -17,3 +17,24 @@
   text-align: center;
   color:#c4c4c4;
 }
+
+@media (max-width: 830px) {
+  .advanteges__item {
+    padding: 10px;
+    max-width: 400px;
+    margin-bottom: 5px;
+  }
+  
+  .advanteges__item-title {
+    font-size: 18px;
+    line-height: 20px;
+    margin: 10px;
+  }
+  
+  .advanteges__item-text {
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    color:#c4c4c4;
+  }
+}
