--- a/src/views/Header/Header.css
+++ b/src/views/Header/Header.css
@@ -1,20 +1,13 @@
 .header {
   background: #000;
+  padding-top: 5px;
 }
-.header-account {
-  background-image: url(../../img/bg-hed_ac.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 140px;
-}
-
 .header__items {
   display: flex;
   align-items: center;
   justify-content: space-around;
   color: white;
-  height: 70px;
+  min-height: 70px;
 }
 
 .header__left {
@@ -28,13 +21,13 @@
 }
 
 .header__left:hover {
-  color: #cc2132;
+  color: #d49e4b;
   transition: 0.9s;
 }
 
 .header__right {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -51,4 +44,39 @@
   padding: 5px 10px;
   cursor: pointer;
   margin-left: 10px;
+}
+
+@media (max-width: 1006px) {
+  .header__right {
+    margin: 10px;
+  }
+  .btn {
+    border: 1px solid;
+    padding: 5px 5px;
+    margin-left: 5px;
+  }
+}
+
+@media (max-width: 730px) {
+  .header__left {
+    font-size: 24px;
+    line-height: 26px;
+  }
+}
+
+@media (max-width: 705px) {
+  .contact p {
+    font-size: 14px;
+  }
+
+  .contact {
+    margin-right: 15px;
+  }
+
+}
+
+@media (max-width: 569px) {
+  .contact {
+    display: none;
+  }
 }
