--- a/src/views/Title/Title.css
+++ b/src/views/Title/Title.css
@@ -11,3 +11,17 @@
 .border-top {
   border-top: 1px solid white;
 }
+
+@media (max-width: 705px) {
+  .section__title {
+    font-size: 38px;
+    line-height: 40px;
+  }
+}
+
+@media (max-width: 509px) {
+  .section__title {
+    font-size: 30px;
+    line-height: 32px;
+  }
+}
