--- a/src/views/Contact/Contact.css
+++ b/src/views/Contact/Contact.css
@@ -5,7 +5,7 @@
 }
 
 .contacts__img-items {
-  margin: 30px;
+  margin-right: 30px;
 }
 
 .contacts__info {
@@ -24,4 +24,55 @@
   font-size: 16px;
   line-height: 20px;
   align-items: start;
+}
+
+@media (max-width:600px) {
+  .contacts__info {
+    max-width: 300px;
+    padding: 10px;
+  }
+  
+  .contacts__info-title {
+    margin-bottom: 5px;
+    font-size: 18px;
+    line-height: 20px;
+    align-items: start;
+  }
+  
+  .contacts__info-text {
+    font-size: 16px;
+    line-height: 18px;
+    align-items: start;
+  }
+}
+
+@media (max-width:450px) {
+  .contacts__info {
+    max-width: 250px;
+    padding: 10px;
+  }
+  
+  .contacts__info-title {
+    margin-bottom: 5px;
+    font-size: 18px;
+    line-height: 20px;
+    align-items: start;
+  }
+  
+  .contacts__img-items {
+    margin-right: 10px;
+  }
+
+  .contacts__info-text {
+    font-size: 16px;
+    line-height: 18px;
+    align-items: start;
+  }
+}
+
+@media (max-width:350px) {
+ 
+  .contacts__img-items {
+    display: none;
+  }
 }
