--- a/src/views/Modal/Modal.css
+++ b/src/views/Modal/Modal.css
@@ -94,3 +94,78 @@
   .modal__error-text {
     color: red;
   }
+
+
+@media (max-width:600px) {
+.modal__header {
+  margin-bottom: 20px;
+}
+
+.modal__title {
+  font-size: 24px;
+  
+}
+.close {
+ font-size: 40px;
+ left: 20px;
+} 
+
+.modal__body {
+  margin-bottom: 0px;
+ }
+
+.modal__body-item {
+ font-size: 14px;
+ line-height: 16px;
+ width: 60%;
+ padding: 10px;
+ margin-bottom: 15px;
+}
+
+.note__btn-modal {
+  font-size: 16px;
+  line-height: 18px;
+  padding: 12px 40px;
+  margin-top: 15px;
+}
+
+}
+
+@media (max-width: 530px) {
+  .modal__body-item {
+    width: 70%;
+   }
+}
+
+@media (max-width: 470px) {
+  .modal__title {
+    font-size: 22px;
+    
+  }
+  .close {
+   font-size: 35px;
+   left: 25px;
+  } 
+  
+  .modal__body-item {
+   width: 80%;
+  }
+  .note__btn-modal {
+    padding: 9px 35px;
+  }
+  }
+
+  @media (max-width: 375px) {
+    .modal__title {
+      font-size: 20px;
+  }
+
+  .close {
+    font-size: 35px;
+    left: 35px;
+}
+}
+
+.modal__body-item {
+  width: 90%;
+}
