--- a/src/views/Registration/Registration.css
+++ b/src/views/Registration/Registration.css
@@ -1,4 +1,3 @@
-
 .modal__input-title {
   font-size: 16px;
   color: rgb(146, 146, 146);
@@ -11,21 +10,18 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.45);
-  display: none;
+  background: rgba(0, 0, 0, 0.45);
+  display: flex;
 }
 
-.is-open {
- display: flex;
-} 
 .modal__reg-dialog {
- max-width: 780px;
- width: 95%;
- border-radius: 5px;
- margin: auto;
- padding: 40px 45px;
- border: 2px solid #cc9748;
- background: black;
+  max-width: 780px;
+  width: 95%;
+  border-radius: 5px;
+  margin: auto;
+  padding: 40px 45px;
+  border: 2px solid #cc9748;
+  background: black;
 }
 
 .modal__reg-header {
@@ -36,51 +32,47 @@
 }
 
 .modal__reg-title {
- margin: 0;
- color: whitesmoke;
+  margin: 0;
+  color: whitesmoke;
   font-size: 28px;
-  
 }
 .close {
- font-size: 46px;
- border: none;
- background-color: transparent;
+  font-size: 46px;
+  border: none;
+  background-color: transparent;
   cursor: pointer;
   color: white;
   position: relative;
   bottom: 30px;
   left: 15px;
-} 
+}
 
 .modal__reg-body {
   margin-bottom: 30px;
- }
+}
 
 input::-webkit-input-placeholder {
-   
-    color: white; 
+  color: white;
 }
 input::-moz-placeholder {
-  color: gold; 
+  color: gold;
 }
-
 
 input:invalid:not(:placeholder-shown) {
   border-color: red;
 }
 
 .modal__reg-item {
- font-weight: normal;
- font-size: 16px;
- line-height: 20px;
- width: 70%;
- color: white;
- border: 2px solid #cc9748;
- border-radius: 5px;
- padding: 15px;
- margin-bottom: 20px;
- background: rgba(0,0,0,0.5);
- 
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  width: 70%;
+  color: white;
+  border: 2px solid #cc9748;
+  border-radius: 5px;
+  padding: 15px;
+  margin-bottom: 20px;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .note__btn-modal {
@@ -99,80 +91,83 @@ input:invalid:not(:placeholder-shown) {
 .note__btn-modal:hover {
   background-color: white;
   color: black;
-} 
+}
 
+.modal__error-text {
+  color: red;
+}
 
-@media (max-width:600px) {
+@media (max-width: 600px) {
   .modal__reg-header {
     margin-bottom: 20px;
   }
-  
+
   .modal__reg-title {
     font-size: 24px;
-    
   }
   .close {
-   font-size: 40px;
-   left: 20px;
-  } 
-  
+    font-size: 40px;
+    left: 20px;
+  }
+
   .modal__reg-body {
     margin-bottom: 0px;
-   }
-  
-  .modal__reg-item {
-   font-size: 14px;
-   line-height: 16px;
-   width: 60%;
-   padding: 10px;
-   margin-bottom: 15px;
   }
-  
+
+  .modal__reg-item {
+    font-size: 14px;
+    line-height: 16px;
+    width: 60%;
+    padding: 10px;
+    margin-bottom: 15px;
+  }
+
   .note__btn-modal {
     font-size: 16px;
     line-height: 18px;
     padding: 12px 40px;
     margin-top: 15px;
   }
-  
-  }
-  
-  @media (max-width: 530px) {
-    .modal__reg-item {
-      width: 70%;
-     }
-  }
-  
-  @media (max-width: 470px) {
-    .modal__reg-title {
-      font-size: 22px;
-      
-    }
-    .close {
-     font-size: 35px;
-     left: 25px;
-    } 
-    
-    .modal__reg-item {
-     width: 80%;
-    }
-    .note__btn-modal {
-      padding: 9px 35px;
-    }
-    }
-  
-    @media (max-width: 375px) {
-      .modal__reg-title {
-        font-size: 20px;
-    }
-  
-    .close {
-      font-size: 35px;
-      left: 35px;
-  }
-  }
-  
+}
+
+.modal__login-link {
+  color: white;
+}
+
+@media (max-width: 530px) {
   .modal__reg-item {
-    width: 90%;
+    width: 70%;
   }
-  
+}
+
+@media (max-width: 470px) {
+  .modal__reg-title {
+    font-size: 22px;
+  }
+  .close {
+    font-size: 35px;
+    left: 25px;
+  }
+
+  .modal__reg-item {
+    width: 80%;
+  }
+  .note__btn-modal {
+    padding: 9px 35px;
+  }
+}
+
+@media (max-width: 375px) {
+  .modal__reg-title {
+    font-size: 20px;
+  }
+
+  .close {
+    font-size: 35px;
+    left: 35px;
+  }
+}
+
+.modal__reg-item {
+  width: 90%;
+}
